--- a/smth/smth.vcxproj
+++ b/smth/smth.vcxproj
@@ -144,6 +144,7 @@
   <ItemGroup>
     <ClInclude Include="Account.h" />
     <ClInclude Include="Bank.h" />
+    <ClInclude Include="CreateAccounts.h" />
     <ClInclude Include="Customer.h" />
     <ClInclude Include="NormalAccount.h" />
     <ClInclude Include="PrivilegeAccount.h" />
