--- a/smth/smth.vcxproj.filters
+++ b/smth/smth.vcxproj.filters
@@ -38,5 +38,8 @@
     <ClInclude Include="Bank.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="CreateAccounts.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
